<resources>
    <string name="app_name">MobirutPDA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_inicio_menu">InicioMenu</string>

    <string name="ingresartexto">...</string>

    <string name="btn_buscar">Buscar</string>
    <string name="btn_Limpiar">Limpiar</string>
    <string name="btn_atras">Atras</string>
    <string name="btn_nuevabusq">Nueva búsqueda</string>
    <string name="btn_modificar">Modificar</string>
    <string name="btn_eliminar">Eliminar</string>

    <string name="lbl_buscarclientetitulo">Búsqueda de Cliente</string>
    <string name="lbl_buscarclientecodigo">Código</string>
    <string name="lbl_buscarclienterazon">Cliente</string>

    <string name="lbl_infocliente_titulo">Dat Cliente</string>
    <string name="btn_infocliente_mod">Mod.</string>
    <string name="btn_infocliente_prom">Prom.</string>
    <string name="btn_infocliente_datos">Datos</string>
    <string name="lbl_infocliente_codigo">Cód:</string>
    <string name="lbl_infocliente_nombre">Cliente:</string>
    <string name="lbl_infocliente_docfiscal">Doc.F:</string>
    <string name="lbl_infocliente_direccion">Dirección:</string>
    <string name="lbl_infocliente_segmento">Segmento:</string>
    <string name="lbl_infocliente_categoria">Categoria:</string>
    <string name="lbl_infocliente_telefono">Teléfono:</string>
    <string name="lbl_infocliente_telefono_promt">Teléfono</string>
    <string name="lbl_infocliente_agentret">Age.Reten:</string>
    <string name="lbl_infocliente_aval">Aval:</string>
    <string name="btn_infocliente_pedido">Pedido</string>
    <string name="btn_infocliente_visita">Visita</string>
    <string name="btn_infocliente_gestion">Gestion</string>
    <string name="btn_infocliente_estped">EstPed</string>
    <string name="lbl_infocliente_titulo_lineacred">Líneas de Crédito</string>
    <string name="lbl_infocliente_porcentajedoc">Docs(%)</string>
    <string name="lbl_infocliente_titulo_ctacte">Cuenta Corriente</string>

    <string name="lbl_infocliente_lincred_aprobado">Aprob:</string>
    <string name="lbl_infocliente_lincred_disponible">Dispon:</string>

    <string name="lbl_infocliente_ctacte_documento">Doc:</string>
    <string name="lbl_infocliente_ctacte_importe"></string>
    <string name="lbl_infocliente_ctacte_fecha">Fecha:</string>
    <string name="lbl_infocliente_ctacte_dias">Dias:</string>
    <string name="lbl_infocliente_ctacte_coduni">C.Uni:</string>
    <string name="lbl_infocliente_ctacte_permitido">Permitido:</string>
    <string name="lbl_infocliente_ctacte_docref">D.Ref:</string>

    <string name="lbl_buscarpedido_titulo">Búsqueda de Pedidos</string>
    <string name="lbl_buscarpedido_enviado">Enviados</string>
    <string name="lbl_buscarpedido_codigo">Código</string>
    <string name="lbl_buscarpedido_nombre">Cliente</string>

    <string name="lbl_buscarpedido_item_codigo">Pedido:</string>
    <string name="lbl_buscarpedido_item_nombre">Nombre:</string>
    <string name="lbl_buscarpedido_item_cotiza">Cot:</string>
    <string name="lbl_buscarpedido_item_fechareg">FReg:</string>
    <string name="lbl_buscarpedido_item_fechamod">FMod:</string>
</resources>
