<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <!-- Cabecera de Textos -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp">

                <TextView
                    android:text="@string/lbl_buscarpedido_titulo"
                    android:textSize="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"/>

                <CheckBox
                    android:id="@+id/ChkVerEnviados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_buscarpedido_enviado"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TableLayout android:id="@+id/lbl_panelbuscar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="2">

                <TableRow android:layout_marginBottom="4dp">
                    <TextView
                        android:text="@string/lbl_buscarpedido_codigo"
                        android:textSize="15dp"
                        android:layout_width="50dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_gravity="fill_vertical"/>

                    <EditText
                        android:id="@+id/lblPedido"
                        android:layout_column="2"
                        android:inputType="number"
                        android:layout_height="25dp"
                        android:textSize="15dp"
                        android:layout_marginRight="3dp"
                        android:layout_gravity="fill_vertical"
                        android:hint="@string/ingresartexto"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp">
                        <requestFocus />
                    </EditText>

                    <Button
                        android:id="@+id/btnBuscar"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textSize="15dp"
                        android:text="@string/btn_buscar"
                        android:onClick="EventoBuscar"
                        android:layout_marginRight="3dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"/>
                </TableRow>

                <TableRow android:layout_marginBottom="6dp">
                    <TextView
                        android:text="@string/lbl_buscarpedido_nombre"
                        android:textSize="15dp"
                        android:layout_width="50dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_gravity="fill_vertical"/>

                    <EditText
                        android:id="@+id/lblCliente"
                        android:layout_column="2"
                        android:capitalize="characters"
                        android:layout_height="25dp"
                        android:textSize="15dp"
                        android:layout_marginRight="3dp"
                        android:hint="@string/ingresartexto"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"/>

                    <Button
                        android:id="@+id/btnLimpiar"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textSize="15dp"
                        android:text="@string/btn_Limpiar"
                        android:onClick="EventoLimpiar"
                        android:layout_marginRight="3dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <!-- Panel de Filtrado -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorLine"/>

            <ListView
                android:id="@+id/lvPedido"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:divider="#FFFFFF"
                android:dividerHeight="1dp"
                android:layout_gravity="center"
                android:drawSelectorOnTop="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">
            <Button
                android:id="@+id/btn_modificar"
                android:layout_width="108dp"
                android:layout_height="25dp"
                android:text="@string/btn_modificar"
                android:textSize="15dp"
                android:onClick="EventoModificar"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_eliminar"
                android:layout_width="108dp"
                android:layout_height="25dp"
                android:text="@string/btn_eliminar"
                android:textSize="15dp"
                android:onClick="EventoEliminar"
                android:layout_marginLeft="3dp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="right">
                <Button
                    android:id="@+id/btn_atras"
                    android:layout_width="108dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="1dp"
                    android:text="@string/btn_atras"
                    android:textSize="15dp"
                    android:onClick="EventoAtras"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
