<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:baselineAligned="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Codigo -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:text="@string/lbl_buscarpedido_item_codigo">
            </TextView>

            <TextView
                android:id="@+id/lblCodigoPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/lblCodigoCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp">
            </TextView>
        </LinearLayout>

        <!-- Descripcion -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginLeft="3dp"
                android:text="@string/lbl_buscarpedido_item_nombre">
            </TextView>

            <TextView
                android:id="@+id/lblNombre"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:lines="1">
            </TextView>
        </LinearLayout>

        <!-- Promocion y Cantidad -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Cotizacion -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:text="@string/lbl_buscarpedido_item_cotiza">
            </TextView>

            <TextView
                android:id="@+id/lblNCotiza"
                android:layout_width="30dip"
                android:layout_height="wrap_content"
                android:textSize="14dp">
            </TextView>

            <!-- F.Registro -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:text="@string/lbl_buscarpedido_item_fechareg">
            </TextView>

            <TextView
                android:id="@+id/lblFRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp">
            </TextView>

            <!-- F. Modifica -->
            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_gravity="right"
                    android:text="@string/lbl_buscarpedido_item_fechamod">
                </TextView>

                <TextView
                    android:id="@+id/lblFModifica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="right">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
