<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/tabBusqueda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_yellow"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="3dp"
                android:text="@string/lbl_buscarclientetitulo"
                android:textSize="16dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>

            <TableLayout
                android:id="@+id/lbl_panelbuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="2">

                <TableRow android:layout_marginBottom="4dp">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="20dp"
                        android:layout_gravity="fill_vertical"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:text="@string/lbl_buscarclientecodigo"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/txtCodigo"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_column="2"
                        android:layout_gravity="fill_vertical"
                        android:layout_marginRight="3dp"
                        android:background="@drawable/edittext_style"
                        android:hint="@string/ingresartexto"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textSize="15dp">

                        <requestFocus />
                    </EditText>

                    <LinearLayout
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnBuscarCli"
                            android:layout_width="@dimen/size40"
                            android:layout_height="wrap_content"

                            android:background="@drawable/shape_silver"
                            android:drawableLeft="@android:drawable/ic_menu_search"
                            android:onClick="EventoBuscar" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_marginTop="2dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="20dp"
                        android:layout_gravity="fill_vertical"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:text="@string/lbl_buscarclienterazon"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/txtNombre"
                        android:layout_height="25dp"
                        android:layout_column="2"
                        android:layout_marginRight="3dp"
                        android:background="@drawable/edittext_style"
                        android:capitalize="characters"
                        android:hint="@string/ingresartexto"
                        android:inputType="textCapCharacters"
                        android:maxLength="15"
                        android:textSize="15dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnLimpiarCli"
                            android:layout_width="@dimen/size40"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shape_silver"
                            android:drawableStart="@android:drawable/ic_popup_sync"
                            android:onClick="EventoLimpiar" />
                    </LinearLayout>

                </TableRow>
            </TableLayout>

        </LinearLayout>

        <!-- Panel de Filtrado -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp" />

            <ListView
                android:id="@+id/lvCliente"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:dividerHeight="1dp"
                android:drawSelectorOnTop="false" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
